SSRF protection and improved openapi, healthcheck added
